--- a/po/it.po
+++ b/po/it.po
@@ -5,49 +5,49 @@ msgstr ""
 "POT-Creation-Date: 2025-11-19 09:20+0100\n"
 "PO-Revision-Date: 2025-11-19 18:37\n"
 "Last-Translator: \n"
-"Language-Team: Spanish\n"
-"Language: es_ES\n"
+"Language-Team: Italian\n"
+"Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Crowdin-Project: eye-on-cursor\n"
 "X-Crowdin-Project-ID: 734021\n"
-"X-Crowdin-Language: es-ES\n"
+"X-Crowdin-Language: it\n"
 "X-Crowdin-File: /main/po/eye-on-cursor.pot\n"
 "X-Crowdin-File-ID: 40\n"
 
 #: src/settings/eyeSettings.js:30
 msgid "Eyes"
-msgstr "Ojos"
+msgstr "Occhi"
 
 #: src/settings/eyeSettings.js:38
 msgid "Layout"
-msgstr "Disposición"
+msgstr "Layout"
 
 #: src/settings/eyeSettings.js:44
 msgid "Active"
-msgstr "Activado"
+msgstr "Attivo"
 
 #: src/settings/eyeSettings.js:45
 msgid "Enable the eyes"
-msgstr "Habilitar los ojos"
+msgstr "Abilita gli occhi"
 
 #: src/settings/eyeSettings.js:56
 msgid "Count"
-msgstr "Cantidad"
+msgstr "Conteggio"
 
 #: src/settings/eyeSettings.js:57
 msgid "Number of eyes"
-msgstr "Número de ojos"
+msgstr "Numero di occhi"
 
 #: src/settings/eyeSettings.js:68
 msgid "Displaying more eyes may reduce performance."
-msgstr "Mostrar más ojos puede reducir el rendimiento."
+msgstr "La visualizzazione di più occhi potrebbe ridurre le prestazioni."
 
 #: src/settings/eyeSettings.js:74
 msgid "Left"
-msgstr "Izquierda"
+msgstr "Sinistra"
 
 #: src/settings/eyeSettings.js:74
 msgid "Center"
@@ -55,55 +55,55 @@ msgstr "Centro"
 
 #: src/settings/eyeSettings.js:74
 msgid "Right"
-msgstr "Derecha"
+msgstr "Destra"
 
 #: src/settings/eyeSettings.js:79
 msgid "Position"
-msgstr "Posición"
+msgstr "Posizione"
 
 #: src/settings/eyeSettings.js:80
 msgid "Position of the eyes on the panel"
-msgstr "Posición de los ojos en el panel"
+msgstr "Posizione degli occhi sul pannello"
 
 #: src/settings/eyeSettings.js:92
 msgid "Index"
-msgstr "Índice"
+msgstr "Indice"
 
 #: src/settings/eyeSettings.js:93
 msgid "Index of the eyes on the panel segment"
-msgstr "Índice de los ojos en el segmento del panel"
+msgstr "Indice degli occhi sul segmento del pannello"
 
 #: src/settings/eyeSettings.js:109
 msgid "Width"
-msgstr "Ancho"
+msgstr "Larghezza"
 
 #: src/settings/eyeSettings.js:110
 msgid "Drawing space and padding"
-msgstr "Espacio de dibujo y relleno"
+msgstr "Disegno spazio e imbottitura"
 
 #: src/settings/eyeSettings.js:126
 msgid "Menu"
-msgstr "Menú"
+msgstr "Menu"
 
 #: src/settings/eyeSettings.js:127
 msgid "Enable the eye submenu"
-msgstr "Habilitar el submenú del ojo"
+msgstr "Abilita il sottomenu occhi"
 
 #: src/settings/eyeSettings.js:139 src/settings/trackerSettings.js:42
 msgid "Appearance"
-msgstr "Apariencia"
+msgstr "Aspetto"
 
 #: src/settings/eyeSettings.js:145
 msgid "Natural"
-msgstr "Natural"
+msgstr "Naturale"
 
 #: src/settings/eyeSettings.js:145
 msgid "Round"
-msgstr "Redondo"
+msgstr "Tondo"
 
 #: src/settings/eyeSettings.js:145
 msgid "Comic"
-msgstr "Cómico"
+msgstr "Fumetto"
 
 #: src/settings/eyeSettings.js:148 src/settings/trackerSettings.js:68
 msgid "Shape"
@@ -111,35 +111,35 @@ msgstr "Forma"
 
 #: src/settings/eyeSettings.js:149
 msgid "Shape of the eyes"
-msgstr "Forma de los ojos"
+msgstr "Forma degli occhi"
 
 #: src/settings/eyeSettings.js:161
 msgid "Outline Mode"
-msgstr "Modo de Contorno"
+msgstr "Modalità Contorno"
 
 #: src/settings/eyeSettings.js:162
 msgid "Draw the eyes as outline only"
-msgstr "Dibujar solo el contorno de los ojos"
+msgstr "Disegna gli occhi solo come contorno"
 
 #: src/settings/eyeSettings.js:173
 msgid "Strokes"
-msgstr "Trazos"
+msgstr "Tratti"
 
 #: src/settings/eyeSettings.js:174
 msgid "Thickness of the strokes in outline mode"
-msgstr "Grosor de los trazos en modo de contorno"
+msgstr "Spessore dei tratti in modalità contorno"
 
 #: src/settings/eyeSettings.js:223
 msgid "Iris Color"
-msgstr "Color del iris"
+msgstr "Colore Iris"
 
 #: src/settings/eyeSettings.js:224
 msgid "Custom color for the iris"
-msgstr "Color personalizado para el iris"
+msgstr "Colore personalizzato per l'iride"
 
 #: src/settings/eyeSettings.js:253 src/settings/trackerSettings.js:269
 msgid "Refresh Rate"
-msgstr "Frecuencia de actualización"
+msgstr "Frequenza Di Aggiornamento"
 
 #: src/settings/eyeSettings.js:254 src/settings/trackerSettings.js:270
 msgid "Hz"
@@ -147,55 +147,55 @@ msgstr "Hz"
 
 #: src/settings/eyeSettings.js:265 src/settings/trackerSettings.js:281
 msgid "Higher refresh rates may impact performance."
-msgstr "Frecuencias de actualización más altas pueden afectar el rendimiento."
+msgstr "Valori di aggiornamento più elevati possono influire sulle prestazioni."
 
 #: src/settings/eyeSettings.js:272
 msgid "Blinking"
-msgstr "Parpadeo"
+msgstr "Lampeggiante"
 
 #: src/settings/eyeSettings.js:277
 msgid "Eyelid Color"
-msgstr "Color del párpado"
+msgstr "Colore Della Palpebra"
 
 #: src/settings/eyeSettings.js:288
 msgid "Manual"
-msgstr "Manual"
+msgstr "Manuale"
 
 #: src/settings/eyeSettings.js:288
 msgid "Synced"
-msgstr "Sincronizado"
+msgstr "Sincronizzato"
 
 #: src/settings/eyeSettings.js:288
 msgid "Unsynced"
-msgstr "Asincrónico"
+msgstr "Non Sincronizzato"
 
 #: src/settings/eyeSettings.js:291
 msgid "Blink Mode"
-msgstr "Modo de parpadeo"
+msgstr "Modalità Lampeggiante"
 
 #: src/settings/eyeSettings.js:292
 msgid "Choose how eyes blink"
-msgstr "Elija cómo parpadean los ojos"
+msgstr "Scegli come gli occhi lampeggiano"
 
 #: src/settings/eyeSettings.js:306
 msgid "Manual Blink"
-msgstr "Parpadeo manual"
+msgstr "Collegamento Manuale"
 
 #: src/settings/eyeSettings.js:315
 msgid "Synced Blinking Interval"
-msgstr "Intervalo de parpadeo sincronizado"
+msgstr "Intervallo Di Scollegamento Sincronizzato"
 
 #: src/settings/eyeSettings.js:316
 msgid "Seconds between synchronized blinks"
-msgstr "Segundos entre parpadeos sincronizados"
+msgstr "Secondi tra i lampioni sincronizzati"
 
 #: src/settings/eyeSettings.js:333
 msgid "Unsynced Blinking Interval"
-msgstr "Intervalo de parpadeo asincrónico"
+msgstr "Intervallo Di Scollegamento Non Sincronizzato"
 
 #: src/settings/eyeSettings.js:334
 msgid "Range of seconds between random blinks"
-msgstr "Rango de segundos entre parpadeos aleatorios"
+msgstr "Intervallo di secondi tra lampioni casuali"
 
 #: src/settings/eyeSettings.js:402
 msgid "to"
@@ -203,11 +203,11 @@ msgstr "a"
 
 #: src/settings/about.js:60
 msgid "About"
-msgstr "Acerca de"
+msgstr "Informazioni"
 
 #: src/settings/about.js:61
 msgid "Development information and credits"
-msgstr "Información de desarrollo y créditos"
+msgstr "Informazioni sullo sviluppo e crediti"
 
 #: src/settings/about.js:93
 msgctxt "(USER)NAME EMAIL/URL"
@@ -216,97 +216,97 @@ msgstr "djinnalexio https://github.com/djinnalexio/"
 
 #: src/settings/about.js:99
 msgid "Extension Page"
-msgstr "Página de la extensión"
+msgstr "Pagina Estensione"
 
 #: src/settings/about.js:102
 msgid "Donate"
-msgstr "Donar"
+msgstr "Dona"
 
 #: src/settings/about.js:103
 msgid "Forked from"
-msgstr "Derivado de"
+msgstr "Forkato da"
 
 #: src/settings/about.js:106
 msgid "Cinnamon Fork"
-msgstr "Derivado de Cinnamon"
+msgstr "Fork di Cinnamon"
 
 #: src/settings/keybinding.js:33 src/settings/keybinding.js:84
 msgid "Set a shortcut"
-msgstr "Establecer un atajo"
+msgstr "Imposta una scorciatoia"
 
 #: src/settings/keybinding.js:42
 msgid "New shortcut…"
-msgstr "Nuevo atajo…"
+msgstr "Nuova scorciatoia…"
 
 #: src/settings/keybinding.js:85
 msgid "Press Esc to cancel or Backspace to disable the shortcut"
-msgstr "Presiona Esc para cancelar o Retroceso para desactivar el atajo"
+msgstr "Premi Esc per annullare o Backspace per disabilitare il collegamento"
 
 #: src/settings/trackerSettings.js:33
 msgid "Mouse Tracker"
-msgstr "Rastreador"
+msgstr "Mouse Tracker"
 
 #: src/settings/trackerSettings.js:69
 msgid "Shape of the tracker"
-msgstr "Forma del rastreador"
+msgstr "Forma del tracker"
 
 #: src/settings/trackerSettings.js:80
 msgid "Select a Tracker"
-msgstr "Elige a Rastreador"
+msgstr "Seleziona un Tracker"
 
 #: src/settings/trackerSettings.js:148
 msgid "Size"
-msgstr "Tamaño"
+msgstr "Dimensione"
 
 #: src/settings/trackerSettings.js:149
 msgid "Size of the tracker"
-msgstr "Tamaño del rastreador"
+msgstr "Dimensione del tracker"
 
 #: src/settings/trackerSettings.js:198
 msgid "Color"
-msgstr "Color"
+msgstr "Colore"
 
 #: src/settings/trackerSettings.js:199
 msgid "Custom color for the tracker"
-msgstr "Color personalizado para el rastreador"
+msgstr "Colore personalizzato per il tracker"
 
 #: src/settings/trackerSettings.js:227
 msgid "Colors on Click"
-msgstr "Colores al hacer clic"
+msgstr "Colori al clic"
 
 #: src/settings/trackerSettings.js:228
 msgid "Colors when left, middle, and right-clicking"
-msgstr "Colores al hacer clic con el botón izquierdo, central y derecho"
+msgstr "Colori a sinistra, centrale e clic destro"
 
 #: src/settings/trackerSettings.js:234
 msgid "Click highlighting does not work in applications on Wayland. See README."
-msgstr "El resaltado de clics no funciona en aplicaciones en Wayland. Ver README."
+msgstr "Fare clic sull'evidenziazione non funziona in applicazioni su Wayland. Vedere README."
 
 #: src/settings/trackerSettings.js:238
 msgid "Middle-click highlighting does not work on x11. See README."
-msgstr "El resaltado de clics medios no funciona en x11. Ver README."
+msgstr "L'evidenziazione del clic centrale non funziona su x11. Vedere README."
 
 #: src/settings/trackerSettings.js:252
 msgid "Opacity"
-msgstr "Opacidad"
+msgstr "Opacità"
 
 #: src/settings/trackerSettings.js:253
 msgid "Opacity of the tracker"
-msgstr "Opacidad del rastreador"
+msgstr "Opacità del tracker"
 
 #: src/settings/trackerSettings.js:287
 msgid "Keybinding"
-msgstr "Tecla"
+msgstr "Keybinding"
 
 #: src/settings/trackerSettings.js:294 src/lib/eye.js:103
 msgid "Toggle Tracker"
-msgstr "Activar/Desactivar el Rastreador"
+msgstr "Attiva/Disattiva Tracker"
 
 #: src/settings/trackerSettings.js:302
 msgid "Credits"
-msgstr "Créditos"
+msgstr "Riconoscimenti"
 
 #: src/lib/eye.js:108
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Impostazioni"
 
