--- a/po/pt.po
+++ b/po/pt.po
@@ -5,97 +5,97 @@ msgstr ""
 "POT-Creation-Date: 2025-11-19 09:20+0100\n"
 "PO-Revision-Date: 2025-11-19 18:37\n"
 "Last-Translator: \n"
-"Language-Team: Spanish\n"
-"Language: es_ES\n"
+"Language-Team: Portuguese\n"
+"Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Crowdin-Project: eye-on-cursor\n"
 "X-Crowdin-Project-ID: 734021\n"
-"X-Crowdin-Language: es-ES\n"
+"X-Crowdin-Language: pt-PT\n"
 "X-Crowdin-File: /main/po/eye-on-cursor.pot\n"
 "X-Crowdin-File-ID: 40\n"
 
 #: src/settings/eyeSettings.js:30
 msgid "Eyes"
-msgstr "Ojos"
+msgstr "Olhos"
 
 #: src/settings/eyeSettings.js:38
 msgid "Layout"
-msgstr "Disposición"
+msgstr "Disposição"
 
 #: src/settings/eyeSettings.js:44
 msgid "Active"
-msgstr "Activado"
+msgstr "Ativo"
 
 #: src/settings/eyeSettings.js:45
 msgid "Enable the eyes"
-msgstr "Habilitar los ojos"
+msgstr "Ativar os olhos"
 
 #: src/settings/eyeSettings.js:56
 msgid "Count"
-msgstr "Cantidad"
+msgstr "Quantidade"
 
 #: src/settings/eyeSettings.js:57
 msgid "Number of eyes"
-msgstr "Número de ojos"
+msgstr "Número de olhos"
 
 #: src/settings/eyeSettings.js:68
 msgid "Displaying more eyes may reduce performance."
-msgstr "Mostrar más ojos puede reducir el rendimiento."
+msgstr "Exibir mais olhos podem reduzir o desempenho."
 
 #: src/settings/eyeSettings.js:74
 msgid "Left"
-msgstr "Izquierda"
+msgstr "Esquerda"
 
 #: src/settings/eyeSettings.js:74
 msgid "Center"
-msgstr "Centro"
+msgstr "Centralizar"
 
 #: src/settings/eyeSettings.js:74
 msgid "Right"
-msgstr "Derecha"
+msgstr "Direita"
 
 #: src/settings/eyeSettings.js:79
 msgid "Position"
-msgstr "Posición"
+msgstr "Posição"
 
 #: src/settings/eyeSettings.js:80
 msgid "Position of the eyes on the panel"
-msgstr "Posición de los ojos en el panel"
+msgstr "Posição dos olhos no painel"
 
 #: src/settings/eyeSettings.js:92
 msgid "Index"
-msgstr "Índice"
+msgstr "Indexação"
 
 #: src/settings/eyeSettings.js:93
 msgid "Index of the eyes on the panel segment"
-msgstr "Índice de los ojos en el segmento del panel"
+msgstr "Índice dos olhos no segmento do painel"
 
 #: src/settings/eyeSettings.js:109
 msgid "Width"
-msgstr "Ancho"
+msgstr "Largura"
 
 #: src/settings/eyeSettings.js:110
 msgid "Drawing space and padding"
-msgstr "Espacio de dibujo y relleno"
+msgstr "Desenhando espaço e espaçamento"
 
 #: src/settings/eyeSettings.js:126
 msgid "Menu"
-msgstr "Menú"
+msgstr "Menu"
 
 #: src/settings/eyeSettings.js:127
 msgid "Enable the eye submenu"
-msgstr "Habilitar el submenú del ojo"
+msgstr "Ativar submenu do olho"
 
 #: src/settings/eyeSettings.js:139 src/settings/trackerSettings.js:42
 msgid "Appearance"
-msgstr "Apariencia"
+msgstr "Aparência"
 
 #: src/settings/eyeSettings.js:145
 msgid "Natural"
-msgstr "Natural"
+msgstr "Naturais"
 
 #: src/settings/eyeSettings.js:145
 msgid "Round"
@@ -103,7 +103,7 @@ msgstr "Redondo"
 
 #: src/settings/eyeSettings.js:145
 msgid "Comic"
-msgstr "Cómico"
+msgstr "Quadrinhos"
 
 #: src/settings/eyeSettings.js:148 src/settings/trackerSettings.js:68
 msgid "Shape"
@@ -111,35 +111,35 @@ msgstr "Forma"
 
 #: src/settings/eyeSettings.js:149
 msgid "Shape of the eyes"
-msgstr "Forma de los ojos"
+msgstr "Formato dos olhos"
 
 #: src/settings/eyeSettings.js:161
 msgid "Outline Mode"
-msgstr "Modo de Contorno"
+msgstr "Modo de contorno"
 
 #: src/settings/eyeSettings.js:162
 msgid "Draw the eyes as outline only"
-msgstr "Dibujar solo el contorno de los ojos"
+msgstr "Desenhe os olhos como apenas o contorno"
 
 #: src/settings/eyeSettings.js:173
 msgid "Strokes"
-msgstr "Trazos"
+msgstr "Braçadas"
 
 #: src/settings/eyeSettings.js:174
 msgid "Thickness of the strokes in outline mode"
-msgstr "Grosor de los trazos en modo de contorno"
+msgstr "Espessura dos traços no modo de contorno"
 
 #: src/settings/eyeSettings.js:223
 msgid "Iris Color"
-msgstr "Color del iris"
+msgstr "Cor do íris"
 
 #: src/settings/eyeSettings.js:224
 msgid "Custom color for the iris"
-msgstr "Color personalizado para el iris"
+msgstr "Cor personalizada para a íris"
 
 #: src/settings/eyeSettings.js:253 src/settings/trackerSettings.js:269
 msgid "Refresh Rate"
-msgstr "Frecuencia de actualización"
+msgstr "Taxa de atualização"
 
 #: src/settings/eyeSettings.js:254 src/settings/trackerSettings.js:270
 msgid "Hz"
@@ -147,19 +147,19 @@ msgstr "Hz"
 
 #: src/settings/eyeSettings.js:265 src/settings/trackerSettings.js:281
 msgid "Higher refresh rates may impact performance."
-msgstr "Frecuencias de actualización más altas pueden afectar el rendimiento."
+msgstr "Taxas de atualização altas podem afetar o desempenho."
 
 #: src/settings/eyeSettings.js:272
 msgid "Blinking"
-msgstr "Parpadeo"
+msgstr "Piscando"
 
 #: src/settings/eyeSettings.js:277
 msgid "Eyelid Color"
-msgstr "Color del párpado"
+msgstr "Cor das Pálpebras"
 
 #: src/settings/eyeSettings.js:288
 msgid "Manual"
-msgstr "Manual"
+msgstr "Manualmente"
 
 #: src/settings/eyeSettings.js:288
 msgid "Synced"
@@ -167,47 +167,47 @@ msgstr "Sincronizado"
 
 #: src/settings/eyeSettings.js:288
 msgid "Unsynced"
-msgstr "Asincrónico"
+msgstr "Dessincronizado"
 
 #: src/settings/eyeSettings.js:291
 msgid "Blink Mode"
-msgstr "Modo de parpadeo"
+msgstr "Modo de piscar"
 
 #: src/settings/eyeSettings.js:292
 msgid "Choose how eyes blink"
-msgstr "Elija cómo parpadean los ojos"
+msgstr "Escolha como os olhos piscam"
 
 #: src/settings/eyeSettings.js:306
 msgid "Manual Blink"
-msgstr "Parpadeo manual"
+msgstr "Pisca manual"
 
 #: src/settings/eyeSettings.js:315
 msgid "Synced Blinking Interval"
-msgstr "Intervalo de parpadeo sincronizado"
+msgstr "Intervalo de piscar sincronizado"
 
 #: src/settings/eyeSettings.js:316
 msgid "Seconds between synchronized blinks"
-msgstr "Segundos entre parpadeos sincronizados"
+msgstr "Segundos entre piscadas sincronizadas"
 
 #: src/settings/eyeSettings.js:333
 msgid "Unsynced Blinking Interval"
-msgstr "Intervalo de parpadeo asincrónico"
+msgstr "Intervalo de piscar Dessincronizado"
 
 #: src/settings/eyeSettings.js:334
 msgid "Range of seconds between random blinks"
-msgstr "Rango de segundos entre parpadeos aleatorios"
+msgstr "Intervalo de segundos entre piscadas aleatórios"
 
 #: src/settings/eyeSettings.js:402
 msgid "to"
-msgstr "a"
+msgstr "para"
 
 #: src/settings/about.js:60
 msgid "About"
-msgstr "Acerca de"
+msgstr "Sobre"
 
 #: src/settings/about.js:61
 msgid "Development information and credits"
-msgstr "Información de desarrollo y créditos"
+msgstr "Informações e créditos sobre desenvolvimento"
 
 #: src/settings/about.js:93
 msgctxt "(USER)NAME EMAIL/URL"
@@ -216,91 +216,91 @@ msgstr "djinnalexio https://github.com/djinnalexio/"
 
 #: src/settings/about.js:99
 msgid "Extension Page"
-msgstr "Página de la extensión"
+msgstr "Página da extensão"
 
 #: src/settings/about.js:102
 msgid "Donate"
-msgstr "Donar"
+msgstr "Doar"
 
 #: src/settings/about.js:103
 msgid "Forked from"
-msgstr "Derivado de"
+msgstr "Fork de"
 
 #: src/settings/about.js:106
 msgid "Cinnamon Fork"
-msgstr "Derivado de Cinnamon"
+msgstr "Cinnamon Fork"
 
 #: src/settings/keybinding.js:33 src/settings/keybinding.js:84
 msgid "Set a shortcut"
-msgstr "Establecer un atajo"
+msgstr "Definir um atalho"
 
 #: src/settings/keybinding.js:42
 msgid "New shortcut…"
-msgstr "Nuevo atajo…"
+msgstr "Novo atalho…"
 
 #: src/settings/keybinding.js:85
 msgid "Press Esc to cancel or Backspace to disable the shortcut"
-msgstr "Presiona Esc para cancelar o Retroceso para desactivar el atajo"
+msgstr "Pressione Esc para cancelar ou Backspace para desativar o atalho"
 
 #: src/settings/trackerSettings.js:33
 msgid "Mouse Tracker"
-msgstr "Rastreador"
+msgstr "Rastreador de Mouse"
 
 #: src/settings/trackerSettings.js:69
 msgid "Shape of the tracker"
-msgstr "Forma del rastreador"
+msgstr "Formato do rastreador"
 
 #: src/settings/trackerSettings.js:80
 msgid "Select a Tracker"
-msgstr "Elige a Rastreador"
+msgstr "Selecione um Rastreador"
 
 #: src/settings/trackerSettings.js:148
 msgid "Size"
-msgstr "Tamaño"
+msgstr "Tamanho"
 
 #: src/settings/trackerSettings.js:149
 msgid "Size of the tracker"
-msgstr "Tamaño del rastreador"
+msgstr "Tamanho do rastreador"
 
 #: src/settings/trackerSettings.js:198
 msgid "Color"
-msgstr "Color"
+msgstr "Cor"
 
 #: src/settings/trackerSettings.js:199
 msgid "Custom color for the tracker"
-msgstr "Color personalizado para el rastreador"
+msgstr "Cor personalizada para o rastreador"
 
 #: src/settings/trackerSettings.js:227
 msgid "Colors on Click"
-msgstr "Colores al hacer clic"
+msgstr "Cores ao Clique"
 
 #: src/settings/trackerSettings.js:228
 msgid "Colors when left, middle, and right-clicking"
-msgstr "Colores al hacer clic con el botón izquierdo, central y derecho"
+msgstr "Cores quando esquerda, meio e botão direito"
 
 #: src/settings/trackerSettings.js:234
 msgid "Click highlighting does not work in applications on Wayland. See README."
-msgstr "El resaltado de clics no funciona en aplicaciones en Wayland. Ver README."
+msgstr "Clique em destacar não funciona em aplicativos no Wayland. Veja LEIAME."
 
 #: src/settings/trackerSettings.js:238
 msgid "Middle-click highlighting does not work on x11. See README."
-msgstr "El resaltado de clics medios no funciona en x11. Ver README."
+msgstr "O realce do Mediador não funciona no x11. Ver LEIAME."
 
 #: src/settings/trackerSettings.js:252
 msgid "Opacity"
-msgstr "Opacidad"
+msgstr "Transparência"
 
 #: src/settings/trackerSettings.js:253
 msgid "Opacity of the tracker"
-msgstr "Opacidad del rastreador"
+msgstr "Opacidade do rastreador"
 
 #: src/settings/trackerSettings.js:287
 msgid "Keybinding"
-msgstr "Tecla"
+msgstr "Teclas de atalho"
 
 #: src/settings/trackerSettings.js:294 src/lib/eye.js:103
 msgid "Toggle Tracker"
-msgstr "Activar/Desactivar el Rastreador"
+msgstr "Alternar Rastreador"
 
 #: src/settings/trackerSettings.js:302
 msgid "Credits"
@@ -308,5 +308,5 @@ msgstr "Créditos"
 
 #: src/lib/eye.js:108
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Configurações"
 
