--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5,209 +5,209 @@ msgstr ""
 "POT-Creation-Date: 2025-11-19 09:20+0100\n"
 "PO-Revision-Date: 2025-11-19 18:37\n"
 "Last-Translator: \n"
-"Language-Team: Spanish\n"
-"Language: es_ES\n"
+"Language-Team: Chinese Simplified\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "X-Crowdin-Project: eye-on-cursor\n"
 "X-Crowdin-Project-ID: 734021\n"
-"X-Crowdin-Language: es-ES\n"
+"X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /main/po/eye-on-cursor.pot\n"
 "X-Crowdin-File-ID: 40\n"
 
 #: src/settings/eyeSettings.js:30
 msgid "Eyes"
-msgstr "Ojos"
+msgstr "眼镜"
 
 #: src/settings/eyeSettings.js:38
 msgid "Layout"
-msgstr "Disposición"
+msgstr "布局"
 
 #: src/settings/eyeSettings.js:44
 msgid "Active"
-msgstr "Activado"
+msgstr "已启用"
 
 #: src/settings/eyeSettings.js:45
 msgid "Enable the eyes"
-msgstr "Habilitar los ojos"
+msgstr "启用眼镜"
 
 #: src/settings/eyeSettings.js:56
 msgid "Count"
-msgstr "Cantidad"
+msgstr "计数"
 
 #: src/settings/eyeSettings.js:57
 msgid "Number of eyes"
-msgstr "Número de ojos"
+msgstr "眼睛数量"
 
 #: src/settings/eyeSettings.js:68
 msgid "Displaying more eyes may reduce performance."
-msgstr "Mostrar más ojos puede reducir el rendimiento."
+msgstr "显示更多眼睛可能会降低性能。"
 
 #: src/settings/eyeSettings.js:74
 msgid "Left"
-msgstr "Izquierda"
+msgstr "左侧"
 
 #: src/settings/eyeSettings.js:74
 msgid "Center"
-msgstr "Centro"
+msgstr "居中"
 
 #: src/settings/eyeSettings.js:74
 msgid "Right"
-msgstr "Derecha"
+msgstr "右侧"
 
 #: src/settings/eyeSettings.js:79
 msgid "Position"
-msgstr "Posición"
+msgstr "位置"
 
 #: src/settings/eyeSettings.js:80
 msgid "Position of the eyes on the panel"
-msgstr "Posición de los ojos en el panel"
+msgstr "眼睛在面板上的位置"
 
 #: src/settings/eyeSettings.js:92
 msgid "Index"
-msgstr "Índice"
+msgstr "索引"
 
 #: src/settings/eyeSettings.js:93
 msgid "Index of the eyes on the panel segment"
-msgstr "Índice de los ojos en el segmento del panel"
+msgstr "面板段眼睛索引"
 
 #: src/settings/eyeSettings.js:109
 msgid "Width"
-msgstr "Ancho"
+msgstr "Width"
 
 #: src/settings/eyeSettings.js:110
 msgid "Drawing space and padding"
-msgstr "Espacio de dibujo y relleno"
+msgstr "绘制空间和填充空间"
 
 #: src/settings/eyeSettings.js:126
 msgid "Menu"
-msgstr "Menú"
+msgstr "菜单"
 
 #: src/settings/eyeSettings.js:127
 msgid "Enable the eye submenu"
-msgstr "Habilitar el submenú del ojo"
+msgstr "启用眼睛子菜单"
 
 #: src/settings/eyeSettings.js:139 src/settings/trackerSettings.js:42
 msgid "Appearance"
-msgstr "Apariencia"
+msgstr "外观"
 
 #: src/settings/eyeSettings.js:145
 msgid "Natural"
-msgstr "Natural"
+msgstr "自然的"
 
 #: src/settings/eyeSettings.js:145
 msgid "Round"
-msgstr "Redondo"
+msgstr "圆形"
 
 #: src/settings/eyeSettings.js:145
 msgid "Comic"
-msgstr "Cómico"
+msgstr "连环画"
 
 #: src/settings/eyeSettings.js:148 src/settings/trackerSettings.js:68
 msgid "Shape"
-msgstr "Forma"
+msgstr "形状"
 
 #: src/settings/eyeSettings.js:149
 msgid "Shape of the eyes"
-msgstr "Forma de los ojos"
+msgstr "眼睛形状"
 
 #: src/settings/eyeSettings.js:161
 msgid "Outline Mode"
-msgstr "Modo de Contorno"
+msgstr "轮廓模式"
 
 #: src/settings/eyeSettings.js:162
 msgid "Draw the eyes as outline only"
-msgstr "Dibujar solo el contorno de los ojos"
+msgstr "只将眼睛画成轮廓"
 
 #: src/settings/eyeSettings.js:173
 msgid "Strokes"
-msgstr "Trazos"
+msgstr "笔画"
 
 #: src/settings/eyeSettings.js:174
 msgid "Thickness of the strokes in outline mode"
-msgstr "Grosor de los trazos en modo de contorno"
+msgstr "轮廓模式下笔划的厚度"
 
 #: src/settings/eyeSettings.js:223
 msgid "Iris Color"
-msgstr "Color del iris"
+msgstr "冰色"
 
 #: src/settings/eyeSettings.js:224
 msgid "Custom color for the iris"
-msgstr "Color personalizado para el iris"
+msgstr "自定义铁质颜色"
 
 #: src/settings/eyeSettings.js:253 src/settings/trackerSettings.js:269
 msgid "Refresh Rate"
-msgstr "Frecuencia de actualización"
+msgstr "刷新率"
 
 #: src/settings/eyeSettings.js:254 src/settings/trackerSettings.js:270
 msgid "Hz"
-msgstr "Hz"
+msgstr "赫兹"
 
 #: src/settings/eyeSettings.js:265 src/settings/trackerSettings.js:281
 msgid "Higher refresh rates may impact performance."
-msgstr "Frecuencias de actualización más altas pueden afectar el rendimiento."
+msgstr "更高的刷新率可能会影响性能。"
 
 #: src/settings/eyeSettings.js:272
 msgid "Blinking"
-msgstr "Parpadeo"
+msgstr "闪烁的"
 
 #: src/settings/eyeSettings.js:277
 msgid "Eyelid Color"
-msgstr "Color del párpado"
+msgstr "黄色颜色"
 
 #: src/settings/eyeSettings.js:288
 msgid "Manual"
-msgstr "Manual"
+msgstr "手动模式"
 
 #: src/settings/eyeSettings.js:288
 msgid "Synced"
-msgstr "Sincronizado"
+msgstr "已同步"
 
 #: src/settings/eyeSettings.js:288
 msgid "Unsynced"
-msgstr "Asincrónico"
+msgstr "未同步"
 
 #: src/settings/eyeSettings.js:291
 msgid "Blink Mode"
-msgstr "Modo de parpadeo"
+msgstr "闪烁模式"
 
 #: src/settings/eyeSettings.js:292
 msgid "Choose how eyes blink"
-msgstr "Elija cómo parpadean los ojos"
+msgstr "选择眼睛闪烁的方式"
 
 #: src/settings/eyeSettings.js:306
 msgid "Manual Blink"
-msgstr "Parpadeo manual"
+msgstr "手动闪烁"
 
 #: src/settings/eyeSettings.js:315
 msgid "Synced Blinking Interval"
-msgstr "Intervalo de parpadeo sincronizado"
+msgstr "同步闪烁间隔"
 
 #: src/settings/eyeSettings.js:316
 msgid "Seconds between synchronized blinks"
-msgstr "Segundos entre parpadeos sincronizados"
+msgstr "同步闪光之间的秒数"
 
 #: src/settings/eyeSettings.js:333
 msgid "Unsynced Blinking Interval"
-msgstr "Intervalo de parpadeo asincrónico"
+msgstr "未同步闪烁间隔"
 
 #: src/settings/eyeSettings.js:334
 msgid "Range of seconds between random blinks"
-msgstr "Rango de segundos entre parpadeos aleatorios"
+msgstr "随机闪光之间的秒数"
 
 #: src/settings/eyeSettings.js:402
 msgid "to"
-msgstr "a"
+msgstr "到"
 
 #: src/settings/about.js:60
 msgid "About"
-msgstr "Acerca de"
+msgstr "关于"
 
 #: src/settings/about.js:61
 msgid "Development information and credits"
-msgstr "Información de desarrollo y créditos"
+msgstr "发展信息和入计量"
 
 #: src/settings/about.js:93
 msgctxt "(USER)NAME EMAIL/URL"
@@ -216,97 +216,97 @@ msgstr "djinnalexio https://github.com/djinnalexio/"
 
 #: src/settings/about.js:99
 msgid "Extension Page"
-msgstr "Página de la extensión"
+msgstr "扩展页面"
 
 #: src/settings/about.js:102
 msgid "Donate"
-msgstr "Donar"
+msgstr "捐助"
 
 #: src/settings/about.js:103
 msgid "Forked from"
-msgstr "Derivado de"
+msgstr "派生自"
 
 #: src/settings/about.js:106
 msgid "Cinnamon Fork"
-msgstr "Derivado de Cinnamon"
+msgstr "Cinnamon Fork"
 
 #: src/settings/keybinding.js:33 src/settings/keybinding.js:84
 msgid "Set a shortcut"
-msgstr "Establecer un atajo"
+msgstr "设置快捷方式"
 
 #: src/settings/keybinding.js:42
 msgid "New shortcut…"
-msgstr "Nuevo atajo…"
+msgstr "新快捷键…"
 
 #: src/settings/keybinding.js:85
 msgid "Press Esc to cancel or Backspace to disable the shortcut"
-msgstr "Presiona Esc para cancelar o Retroceso para desactivar el atajo"
+msgstr "按Esc键取消或退格以禁用快捷方式"
 
 #: src/settings/trackerSettings.js:33
 msgid "Mouse Tracker"
-msgstr "Rastreador"
+msgstr "鼠标追踪器"
 
 #: src/settings/trackerSettings.js:69
 msgid "Shape of the tracker"
-msgstr "Forma del rastreador"
+msgstr "跟踪器形状"
 
 #: src/settings/trackerSettings.js:80
 msgid "Select a Tracker"
-msgstr "Elige a Rastreador"
+msgstr "选择追踪器"
 
 #: src/settings/trackerSettings.js:148
 msgid "Size"
-msgstr "Tamaño"
+msgstr "大小"
 
 #: src/settings/trackerSettings.js:149
 msgid "Size of the tracker"
-msgstr "Tamaño del rastreador"
+msgstr "追踪器的大小"
 
 #: src/settings/trackerSettings.js:198
 msgid "Color"
-msgstr "Color"
+msgstr "颜色"
 
 #: src/settings/trackerSettings.js:199
 msgid "Custom color for the tracker"
-msgstr "Color personalizado para el rastreador"
+msgstr "追踪器的自定义颜色"
 
 #: src/settings/trackerSettings.js:227
 msgid "Colors on Click"
-msgstr "Colores al hacer clic"
+msgstr "点击时的颜色"
 
 #: src/settings/trackerSettings.js:228
 msgid "Colors when left, middle, and right-clicking"
-msgstr "Colores al hacer clic con el botón izquierdo, central y derecho"
+msgstr "左、中间和右键时的颜色"
 
 #: src/settings/trackerSettings.js:234
 msgid "Click highlighting does not work in applications on Wayland. See README."
-msgstr "El resaltado de clics no funciona en aplicaciones en Wayland. Ver README."
+msgstr "单击高亮在Wayland上的应用程序无法工作。请参阅README。"
 
 #: src/settings/trackerSettings.js:238
 msgid "Middle-click highlighting does not work on x11. See README."
-msgstr "El resaltado de clics medios no funciona en x11. Ver README."
+msgstr "中键单击高亮无法在 x11 上运行。请参阅README。"
 
 #: src/settings/trackerSettings.js:252
 msgid "Opacity"
-msgstr "Opacidad"
+msgstr "不透明度"
 
 #: src/settings/trackerSettings.js:253
 msgid "Opacity of the tracker"
-msgstr "Opacidad del rastreador"
+msgstr "追踪器的不透明度"
 
 #: src/settings/trackerSettings.js:287
 msgid "Keybinding"
-msgstr "Tecla"
+msgstr "按键绑定"
 
 #: src/settings/trackerSettings.js:294 src/lib/eye.js:103
 msgid "Toggle Tracker"
-msgstr "Activar/Desactivar el Rastreador"
+msgstr "切换追踪器"
 
 #: src/settings/trackerSettings.js:302
 msgid "Credits"
-msgstr "Créditos"
+msgstr "致谢"
 
 #: src/lib/eye.js:108
 msgid "Settings"
-msgstr "Configuración"
+msgstr "设置"
 
